--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Erick MPENE
-  description: Engineer Devops
+  description: Devops Engineer
   company: NGH
 
   license: license (GPL-2.0-or-later, MIT, etc)
@@ -8,41 +8,16 @@ galaxy_info:
   min_ansible_version: 2.1
 
   platforms:
-  - name: Ubuntu
+  - name: CentOS
     versions:
     - all
   - name: Debian
     versions:
     - all
-  - name: CentOS
-    versions:
-    - all
-  - name: RedHat
-    versions: 
-    - all
 
   galaxy_tags: 
-    - development
-    - system
-    - docker
-    - compose
-    - ubuntu
-    - debian
-    - centos
-    - redhat
-    - rhel
-    - wordpress
-    - nginx
-    - mariadb
-    - mysql
-    - container
-    - dockerized
-    - containzerized
-    - project
-    - ec2
-    - aws
-    - automation
+    - apache
+    - web
+    - httpd
 
 
-dependencies: 
-  - system_user
