--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,7 @@
 ---
-# handlers file for ansible-mini-projet
+# handlers file for roles/apache
+
+- name: restart_web
+  systemd:
+    name: "{{ web_service }}"
+    state: restarted
